[package]
name = "actix-tcp-example"
version = "0.1.0"
authors = ["Erik Nilsen <enilsen16@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.1.0"
tokio = {version = "1.3", features = ["full"]}
tempfile = "3.2"
